--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,9 @@
 {
   "extends": ["stylelint-config-standard"],
   "plugins": ["stylelint-scss", "stylelint-csstree-validator"],
-  "rules": {
+  "rules": 
+  {
+    "linebreak-style": ["error", "windows"],
     "at-rule-no-unknown": [
       true,
       {
@@ -17,4 +19,6 @@
     "csstree/validator": true
   },
   "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css", "**/*.js", "**/*.jsx"]
+  
+  
 }
